# 2023sbec

./: .gitignore  .gitmodules  README.md  makefile
dados/: .gitignore  Plato (0059) - Charmides (018).json  Plato (0059) - Sophist (007).json  Plato (0059) - Symposium (011).json
dados/diorisis/: Plato (0059) - Apology (002).json  Plato (0059) - Cratylus (005).json  Plato (0059) - Critias (032).json  Plato (0059) - Crito (003).json  Plato (0059) - Euthydemus (021).json  Plato (0059) - Euthyphro (001).json  Plato (0059) - Hippias Major (025).json  Plato (0059) - Hippias Minor (026).json  Plato (0059) - Ion (027).json  Plato (0059) - Laches (019).json  Plato (0059) - Lysis (020).json  Plato (0059) - Meno (024).json  Plato (0059) - Parmenides (009).json  Plato (0059) - Phaedrus (012).json  Plato (0059) - Philebus (010).json  Plato (0059) - Protagoras (022).json  Plato (0059) - Statesman (008).json  Xenophon (0032) - Agesilaus (009).json  Xenophon (0032) - Apology (005).json  Xenophon (0032) - Hiero (008).json  Xenophon (0032) - Symposium (004).json
dados/lexicoegenero/: .gitignore  pyproject.toml  pyproject.tomlb.bak
dados/lexicoegenero/src/lexicogenero/: main.py
dados/lexicoegenero/src/lexicogenero/ferramentas/: data.py  diorisis_reader.py
dados/lexicogenero/: .gitignore
dados/lexicogenero/notebooks/: Checagem.ipynb
dados/lexicogenero/src/lexicogenero/: main.py
dados/lexicogenero/src/lexicogenero/ferramentas/: data.py
fala/: biblio.bib  main.tex
slides/: main.tex
