[tool.poetry]
name = "lexicogenero"
version = "1.0.2"
readme = "README.md"
description = "Léxico e gênero literário em Grego Antigo"
authors = ["Caio Geraldes <caio.geraldes@usp.br>"]
license = 'MIT'

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
betacode = "^1.0"
numpy = "^1.26.0"
pandas = "^2.1.0"
python-dotenv = "^1.0.0"
jupyter = "^1.0.0"
notebook = "^7.0.4"
matplotlib = "^3.8.0"
bs4 = "^0.0.1"
lxml = "^4.9.3"
seaborn = "^0.12.2"
scikit-learn = "^1.3.0"
cltk = {version="^1.1.0", python=">=3.9,<3.11"}
pygtrie = "^2.5.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.15.0"
flake8 = "^4.0.1"
mypy = "^0.910"
coverage = "^5.5"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
pandas-stubs = "^1.2.0"
tox = "^3.24.4"
black = "^21.12b0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
